Changelog (English)
===================

1.4.3
Added support Ubuntu 13.10 (Saucy Salamander)
Added three modes Android UI freeze

1.4.2
Added support Debian 8.0 (jessie)
Interface improvements
Added ability to choose components to install

1.4.1
Added support for installation from rootfs archives (tgz, tbz2)
Added custom installation type (install without make new image file and filesystem)
Bugfix: changing font size
Improved mechanism of disk image file creation (fast re-creation)
Improved framebuffer support

1.4.0
Added function of import/export profiles
Support Android 2.1 (API 7)
Updated list of packages openSUSE (armv7hl)
Added support Fedora 19
Automatic detection of screen resolution (for VNC)
Improved command line utility linuxdeploy

1.3.9
Added support Gentoo (installation requires at least 4 GB of free space)
Limitation of scroll buffer size
Automatic mount /dev/shm
Updated debootstrap up to 1.0.48
Support for multiple input devices in framebuffer mode (in xorg.conf changed lines are marked as #linuxdeploy)
Hide icon in notification bar after you exit the application
Solved problem with running SSH in Arch Linux
Takes into account changes in Arch Linux packages
Bugfix: conflict with SSH applications in Android

1.3.8
Added support Ubuntu 13.04 Raring Ringtail
Added option for stop Android UI in framebuffer mode
Added Wi-Fi lock
Added support armv5tel architecture for openSUSE (VNC now works)
Bugfix: autostart problem

1.3.7
Added support Kali Linux
Added ability to display GUI through framebuffer
Fixed list of packages openSUSE installation
Bugfix: pacman error "invalid option"

1.3.6
Added support Fedora 18
Takes into account changes in openSUSE repository
Takes into account changes in Arch Linux packages
Added application icon in notification bar
Bugfix: dbus error in Arch Linux and Fedora
Bugfix: /dev/pts wrong mount mode

1.3.5
Redesigned interface (include ActionBarSherlock)
Improved autostart feature
Automatic update operating environment