@@ -840,6 +840,15 @@ start_system()
 		return 0
 	fi
 	
+	dbus_init()
+	{
+		# dbus (Debian/Ubuntu/Arch Linux/Kali Linux)
+		[ -e "$MNT_TARGET/run/dbus/pid" ] && rm $MNT_TARGET/run/dbus/pid
+		# dbus (Fedora)
+		[ -e "$MNT_TARGET/var/run/messagebus.pid" ] && rm $MNT_TARGET/var/run/messagebus.pid
+		chroot $MNT_TARGET dbus-daemon --system --fork || true	
+	}
+	
 	case "$1" in
 	ssh)
 		msg -n "SSH :$SSH_PORT ... "
@@ -870,11 +879,7 @@ start_system()
 		[ -n "$XPID" ] && XSESSION=`ps | grep "^$XPID "`
 		if [ -z "$XSESSION" ]; then
 			(set -e
-				# dbus (Debian/Ubuntu/Arch Linux/Kali Linux)
-				[ -e "$MNT_TARGET/run/dbus/pid" ] && rm $MNT_TARGET/run/dbus/pid
-				# dbus (Fedora)
-				[ -e "$MNT_TARGET/var/run/messagebus.pid" ] && rm $MNT_TARGET/var/run/messagebus.pid
-				chroot $MNT_TARGET dbus-daemon --system --fork || true
+				dbus_init
 				# TightVNC Server
 				[ -e "$MNT_TARGET/tmp/.X$VNC_DISPLAY-lock" ] && rm $MNT_TARGET/tmp/.X$VNC_DISPLAY-lock
 				[ -e "$MNT_TARGET/tmp/.X11-unix/X$VNC_DISPLAY" ] && rm $MNT_TARGET/tmp/.X11-unix/X$VNC_DISPLAY
@@ -891,6 +896,7 @@ start_system()
 		[ -n "$XPID" ] && XSESSION=`ps | grep "^$XPID "`
 		if [ -z "$XSESSION" ]; then
 			(set -e
+				dbus_init
 				chroot $MNT_TARGET su - $USER_NAME -c "export DISPLAY=$XSERVER_HOST:$XSERVER_DISPLAY; ~/.xsession &"
 			exit 0)
 			[ $? -eq 0 ] && msg "done" || msg "fail"
@@ -906,21 +912,22 @@ start_system()
 			sed -i "s|Option.*\"fbdev\".*#linuxdeploy|Option \"fbdev\" \"$FB_DEV\" #linuxdeploy|g" $MNT_TARGET/etc/X11/xorg.conf
 			sed -i "s|Option.*\"Device\".*#linuxdeploy|Option \"Device\" \"$FB_INPUT\" #linuxdeploy|g" $MNT_TARGET/etc/X11/xorg.conf
 			(set -e
+				dbus_init
 				case "$FB_FREEZE" in
 				stop)
 					setprop ctl.stop surfaceflinger
-					chroot $MNT_TARGET su - $USER_NAME -c "xinit -- :$FB_DISPLAY -dpi $FB_DPI"
+					chroot $MNT_TARGET su - $USER_NAME -c "xinit -- :$FB_DISPLAY -dpi $FB_DPI $FB_ARGS"
 					reboot				
 				;;
 				pause)
 					pkill -STOP system_server
 					pkill -STOP surfaceflinger
-					chroot $MNT_TARGET su - $USER_NAME -c "xinit -- :$FB_DISPLAY -dpi $FB_DPI"
+					chroot $MNT_TARGET su - $USER_NAME -c "xinit -- :$FB_DISPLAY -dpi $FB_DPI $FB_ARGS"
 					pkill -CONT surfaceflinger
 					pkill -CONT system_server
 				;;
 				*)
-					chroot $MNT_TARGET su - $USER_NAME -c "xinit -- :$FB_DISPLAY -dpi $FB_DPI &"				
+					chroot $MNT_TARGET su - $USER_NAME -c "xinit -- :$FB_DISPLAY -dpi $FB_DPI $FB_ARGS &"
 				;;
 				esac
 			exit 0)
