@@ -33,3 +33,4 @@ FB_DPI=""
 FB_DEV=""
 FB_INPUT=""
 FB_FREEZE=""
+FB_ARGS=""
