@@ -47,6 +47,7 @@
     <string name="fbdpi" translatable="false">100</string>
     <string name="fbdev" translatable="false">/dev/graphics/fb0</string>
     <string name="fbinput" translatable="false">/dev/input/event2</string>
+    <string name="fbargs" translatable="false"></string>
     <string name="fbfreeze" translatable="false">none</string>
     
     <string-array name="default_components" translatable="false">
